--- a/index.html
+++ b/index.html
@@ -1,73 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <link href="./vendor.bundle.css" rel="stylesheet">
-    <link href="./main.bundle.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/gh/t109598105/scoreoutputer/dist/scoreoutputer.min.js"></script>
-</head>
-
-<body>
-    <div id="btn-container" style="position: absolute;top:0;left:0;z-index:99;"></div>
-    <div id="mycanvas"></div>
-    <div class="height-transition" id="panel">
-        <div class="zoom-out-container"> <span id="zoom-btn" title="縮放控制欄"></span> </div>
-        <div class="in-elem">
-            <div style="color:#19062b">
-                <h1> <span id="title"> </span> <label style="font-size:.8rem;cursor:pointer" for="json-file-input">
-                        <span id="json-file-name"> 讀取 JSON </span> </label> <input type="file" id="json-file-input"
-                        style="width:0"> </h1>
-            </div>
-        </div>
-        <div class="in-elem">
-            <div> 請按住 <span style="color:#fc030f">S</span>
-                <div id="first-eye-h-info" style="min-height:1.2rem"> </div>
-            </div>
-        </div>
-        <div class="in-elem">
-            <div> 請按住 <span style="color:#32a84c">D</span>
-                <div id="first-eye-v-info" style="min-height:1.2rem"> </div>
-            </div>
-        </div>
-        <div class="in-elem">
-            <div> <span id="copy-line-info"> 請先繪製出左眼的邊框 </span></div>
-        </div>
-        <div class="in-elem">
-            <div> 切換模型(前後): &lt;&gt;</div>
-        </div>
-        <div class="in-elem" style="margin-top:1rem">
-            <div style="margin-bottom:.5rem"> <a class="my-btn disabled" id="save-btn"> 儲存(或按 A) </a> <a class="my-btn"
-                    id="save-pic"> 截圖 </a> </div>
-        </div>
-    </div>
-    <script defer="defer" src="./vendor.bundle.js"></script>
-    <script defer="defer" src="./main.bundle.js"></script>
-    <script>
-        var so = new ScoreOutputer("109598105");
-		so.addChild("視角可以移動及放大", 2, true);
-        so.addChild("在畫面上畫出左眼的邊框", 2, true);
-        so.addChild("複製左眼邊框變化到右眼", 2, true);
-        so.addChild("可選擇當前讀取角色或按鍵選擇上 / 下一隻角色", 1, true);
-        so.addChild("可儲存座標點檔案", 1, true);
-        so.addChild("回答問題", 2, true);
-
-        //產生自評表，參數如下所示
-        so.renderModal(
-            document.body,
-            'rgba(100,45,58,1)',
-            'white',
-            '15pt',
-            '15px',
-            "自我評分表"
-        );
-        so.installDownloadBtn();
-        so.renderBtn(
-            document.getElementById('btn-container'),
-            "開啟自評表"
-        );
-
-    </script>
-</body>
-
-</html>
+<!DOCTYPE html> <html> <head> <meta charset="utf-8"> <link href="./vendor.bundle.css" rel="stylesheet"><link href="./main.bundle.css" rel="stylesheet"></head> <body> <div id="btn-container" style="position:absolute;top:0;left:0;z-index:99"></div> <div id="mycanvas"></div> <div class="height-transition" id="panel"> <div class="zoom-out-container"> <span id="zoom-btn" title="縮放控制欄"></span> </div> <div class="in-elem"> <div style="color:#19062b"> <h1> <span id="title"> </span> <label style="font-size:.8rem;cursor:pointer" for="json-file-input"> <span id="json-file-name"> 讀取 JSON </span> </label> <input type="file" id="json-file-input" style="width:0"> </h1> </div> </div> <div class="in-elem"> <div> 模型最大 morph: <span id="max-morph"></span></div> </div> <div class="in-elem"> <div> 請按住 <span style="color:#fc030f">S</span> <div id="first-eye-h-info" style="min-height:1.2rem"> </div> </div> </div> <div class="in-elem"> <div> 請按住 <span style="color:#32a84c">D</span> <div id="first-eye-v-info" style="min-height:1.2rem"> </div> </div> </div> <div class="in-elem"> <div> <span id="copy-line-info"> 請先繪製出左眼的邊框 </span></div> </div> <div class="in-elem"> <div> 切換模型(前後): &lt;&gt;</div> </div> <div class="in-elem" style="margin-top:1rem"> <div style="margin-bottom:.5rem"> <a class="my-btn disabled" id="save-btn"> 儲存(或按 A) </a> <a class="my-btn" id="save-pic"> 截圖 </a> </div> </div> </div> <script defer="defer" src="./vendor.bundle.js"></script><script defer="defer" src="./main.bundle.js"></script></body> </html>
